--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h2 class="bg-danger text-white text-center"> <span class="bi bi-person-fill"></span> My-Work</h2>
     <img src="public/profile.jpg" width="200" height="200">
     <p>About Me</p>
+    <h2>Samples</h2>
+    <a href="public/shopping.html">Shopping</a>
 </body>
 </html>
